# exercise2-markaren

./: .gitignore  CMakeLists.txt  README.md
.github/classroom/: autograding.json
include/ais1002/: matrix4.hpp  real_random_generator.hpp  vector3.hpp
include/ais1002/exercises/: exercise1.hpp  exercise2.hpp  exercise3.hpp
src/ais1002/: matrix4.cpp  vector3.cpp
tests/: CMakeLists.txt  test_exercise1.cpp  test_exercise2.cpp  test_exercise3.cpp
